        data block structure.
    - COD::CIF::Tags::Manage:
      - allowed zero-length data block names in new_datablock() in order to
        make it compatible with the usage in COD::CIF::Parser::Yapp.
    - COD::UserMessage:
      - the interface of print_message(), sprint_message(), note(), warning(),
        error() and debug_note() subroutines.
    - codcif:
      - cif_lexer_set_line_length_limit() and cif_lexer_set_tag_length_limit()
        now accept and return size_t instead of int to comply with strlen().
      - split cif{,2}_lexer_set_report_long_items() into
        cif{,2}_lexer_set_report_long_tags() and unified
        cif_lexer_set_report_long_lines() methods.
      - moved lexer buffer specific code to cif_lex_buffer.c; as a result,
        the following methods are now common to both lexers:
        - cif_lexer_cleanup()
        - cif_flex_reset_counters()
        - cif_flex_current_line_number()
        - cif_flex_set_current_line_number()
        - cif_flex_current_position()
        - cif_flex_set_current_position()
        - cif_flex_current_line()
        - cif_flex_previous_line_number()
        - cif_flex_previous_position()
        - cif_flex_previous_line()
        - cif_lexer_set_line_length_limit()
  * Removed:
    - COD::AtomNeighbours:
      - the deprecated neighbour_list_from_chemistry_openbabel_obmol()
        subroutine.
    - COD::CIF::Data::CODPredepositionCheck.
    - COD::ShowStruct.
    - STAR::Parser sources.
    - sdf_add_cod_data:
      - the deprecated --tmp-dir option.
    - cif_parse_old_star script.
    - cif_printout:
      - the deprecated --output-struct option.
    - cif_validate:
      - the deprecated --debug option.
    - cod_predeposition_check script.
    - codcif:
      - unused functions process_escapes(), strclone(), strnclone(),
        strappend() and translate_escape().
  * Fixed:
    - codcif:
      - added casts to avoid comparisons of integer expressions of
        different signedness.
