@@ -1,2 +1,0 @@
-Entry '0000001' references entry '0000002' as a related enantiomer entry.
-Entry '0000002' does not reference entry '0000001' as a related enantiomer entry.
