@@ -39,6 +39,9 @@ cod-tools (3.0.0)
     - COD::UserMessage:
       - the interface of print_message(), sprint_message(), note(), warning(),
         error() and debug_note() subroutines.
+    - COD::CIF::Data::CODNumbers:
+      - stopped supporting the 'enantiomer' field in the cif_fill_data() and
+        is_related_enantiomer_entry() subroutines.
     - codcif:
       - cif_lexer_set_line_length_limit() and cif_lexer_set_tag_length_limit()
         now accept and return size_t instead of int to comply with strlen().
